# Roche-Limit

./: .dockerignore  .gitignore  CMakeLists.txt  README-ja.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: docker.yml
docker/: Dockerfile  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh
docs/: cli.md  configuration.md  migration.md  nginx-sample.md  reverse-proxy-contract.md
lib/auth_core/: CMakeLists.txt
lib/auth_core/include/auth_core/: access_level.h  api_key_hasher.h  api_key_record.h  auth_reason.h  auth_repository.h  auth_result.h  auth_service.h  client_cert_record.h  ip_rule_matcher.h  ip_rule_record.h  login_repository.h  login_request.h  login_result.h  login_service.h  password_hasher.h  request_context.h  user_record.h
lib/auth_core/src/: access_level.cc  api_key_hasher.cc  auth_service.cc  ip_rule_matcher.cc  login_service.cc  password_hasher.cc
lib/auth_store/: CMakeLists.txt
lib/auth_store/include/auth_store/: audit_repository.h  rule_repository.h  schema_bootstrap.h  sqlite_connection.h  user_repository.h
lib/auth_store/src/: audit_repository.cc  rule_repository.cc  rule_repository_api_key.cc  rule_repository_client_cert.cc  rule_repository_compact.cc  schema_bootstrap.cc  sqlite_connection.cc  sqlite_statement.h  user_repository.cc  user_repository_compact.cc  user_repository_csrf.cc  user_repository_login_failure.cc  user_repository_session.cc
lib/common/: CMakeLists.txt
lib/common/include/common/: debug_log.h  hash_util.h
lib/common/src/: debug_log.cc  hash_util.cc
schema/: init.sql
schema/migrations/: 001_drop_api_key_plain.sql  002_api_key_argon2_lookup.sql  003_audit_events.sql  004_login_security.sql  005_session_v2.sql  006_api_key_lifecycle.sql  007_audit_hash_chain.sql  008_client_certs.sql
server/: CMakeLists.txt  crash_handler.cc  crash_handler.h  main.cc
server/assets/: login.css  login.html  login.js
server/config/: app_config.cc  app_config.h
server/http/: auth_controller.cc  auth_controller.h  auth_endpoint_guard.cc  auth_endpoint_guard.h  client_ip_resolver.cc  client_ip_resolver.h  containment_guard.cc  containment_guard.h  controller_support.h  login_asset_loader.cc  login_asset_loader.h  login_controller.cc  login_controller.h  login_page_renderer.cc  login_page_renderer.h  metrics_controller.cc  metrics_controller.h  request_extractor.cc  request_extractor.h  request_observability.cc  request_observability.h  root_controller.cc  root_controller.h  session_cookie_config.cc  session_cookie_config.h
tests/: CMakeLists.txt
tests/auth_core/: auth_service_test.cc  login_service_test.cc
tests/auth_store/: repository_integration_test.cc
tests/server/: app_config_test.cc  auth_endpoint_guard_test.cc  client_ip_resolver_test.cc  containment_guard_test.cc  request_extractor_test.cc  request_observability_test.cc  session_cookie_config_test.cc
tests/tools/: cli_audit_logging_test.cc
tools/: CMakeLists.txt
tools/roche_limit_cli/: CMakeLists.txt  audit_command.cc  audit_command.h  audit_logging.cc  audit_logging.h  cert_command.cc  cert_command.h  cli_support.cc  cli_support.h  ip_command.cc  ip_command.h  key_command.cc  key_command.h  main.cc  user_command.cc  user_command.h
